--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <div class="container">
         <div class="modes">
+            <h1>TIC TAC TOE</h1><br>
+            <h2>Select Mode</h2>
             <button id="aiMode">Computer</button>
             <button id="twopMode">2-Player</button>
         </div>
@@ -28,7 +30,7 @@
             <div class="message-container hide">
                 <p id="msg">Winner</p>
                 <button id="new-btn">New Game</button>
-                <button id="exit-btn"href="index.html">Choose Mode</button>
+                <button id="exit-btn">Choose Mode</button>
             </div>
         </div>
     </div>
